# markdownpal

./: .gitignore  EXAMPLES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
markdownpal/: __init__.py  document.py  inline.py
markdownpal/blocks/: __init__.py  base.py  code.py  heading.py  list_.py  media.py  table.py  text.py
tests/: test_document.py  test_inline.py  test_integration.py
tests/blocks/: test_code.py  test_heading.py  test_list.py  test_media.py  test_table.py  test_text.py
